[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["ryuvi <vicenters10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.1.3"
pyperclip = "^1.8.2"
peewee = "^3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
